--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -402,6 +402,7 @@ jobs:
     env:
       QBS_TEST_SOURCE_ROOT: 'tests'
       QT_ASSUME_STDERR_HAS_CONSOLE: 1
+      QTEST_FUNCTION_TIMEOUT: 9000000
     steps:
     - uses: actions/checkout@v1
     - name: Download artifact
