baremetal: Long live COSMIC toolchain for STM32 ARM architecture
This patch adds support for Cosmic Software compiler for the
bare metal platforms:

 * https://www.cosmicsoftware.com/download.php

Note that this compiler only works on Windows host platforms.

Right now this patch implements support for ARM architecture for
STM32 microcontrollers. But in the future it is simple to extend
it and for other architectures (e.g. for STM8, HC08 and so on).

Also the COSMIC toolchain has been added to the Github CI.

Change-Id: Iabdfd61cc427155117730db46e067004ceb07102
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -532,6 +532,9 @@ jobs:
     - name: rx-elf-gcc-8_3_0_202004-GNURX
       run: QBS_AUTOTEST_PROFILE=rx-elf-gcc-8_3_0_202004-GNURX scripts/test-baremetal.sh release/install-root/bin
       shell: bash
+    - name: cosmic-4_3_11-arm
+      run: QBS_AUTOTEST_PROFILE=cosmic-4_3_11-arm scripts/test-baremetal.sh release/install-root/bin
+      shell: bash
 
   test-macos:
     name: ${{ matrix.config.name }}
