cmake: Add bundled QtScript build
Also, make QtScript dependency optional like we do in the Qbs build.

Tested on macOS, Linux and Windows.

CMake 3.15 is now required for the CMP0092 policy which removes default
warning flags from CMAKE_CXX_FLAGS.

Change-Id: I199fb802d5ad72d1ac8d5a89c05372c43581c95d
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,6 +68,7 @@ jobs:
         - {
             name: 'Build on Linux (CMake)',
             script: './scripts/build-qbs-with-cmake.sh',
+            options: '-DQBS_USE_BUNDLED_QT_SCRIPT=1',
             cacheid: 'cmake',
           }
         - {
@@ -81,6 +82,8 @@ jobs:
       QTEST_FUNCTION_TIMEOUT: 9000000
     steps:
     - uses: actions/checkout@v1
+      with:
+        submodules: true
     - name: Create .ccache dir
       run: mkdir -p ~/.ccache
     - name: prepare timestamp
