--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,2 +1,8 @@
+if (QBS_USE_BUNDLED_QT_SCRIPT OR NOT Qt5Script_FOUND)
+    add_subdirectory(scriptengine)
+else()
+    add_library(qbsscriptengine ALIAS Qt5::Script)
+endif()
+
 add_subdirectory(corelib)
 add_subdirectory(msbuild)
