--- a/tests/auto/buildgraph/CMakeLists.txt
+++ b/tests/auto/buildgraph/CMakeLists.txt
@@ -2,4 +2,6 @@ add_qbs_test(buildgraph
     SOURCES
         tst_buildgraph.cpp
         tst_buildgraph.h
+    DEPENDS
+        qbsscriptengine
     )
