GitHub actions: fix path to mingw archive
This amends 4206f5d2697729436bd9cfb7bfee869c275283be.

Change-Id: I14b8df04783af0d5adb7aa98593ccaba8c2844bf
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -225,7 +225,7 @@ jobs:
         modules.cpp.compilerWrapper:ccache
         modules.qbsbuildconfig.enableAddressSanitizer:false
         modules.qbsbuildconfig.enableBundledQt:true
-        products.qbs_archive.targetName:qbs-windows-${{ github.run_id }}
+        products.qbs_archive.targetName:qbs-windows-mingw-${{ github.run_id }}
         products.qbs_archive.includeTests:true,
       QT_ASSUME_STDERR_HAS_CONSOLE: 1
       WITH_TESTS: 0
