GitHub actions: fix building debug info
This fixes building and arhiving the debug information.

We do not build debug info in release build for now to avoid including
it in the archive - it should be in a separate archive

Change-Id: I01878676190b410b3b76c9bb477dd74bf4cdd767
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -163,6 +163,7 @@ jobs:
     env:
       BUILD_OPTIONS: |
         modules.cpp.compilerWrapper:clcache
+        modules.qbs.debugInformation:true
         modules.qbsbuildconfig.enableAddressSanitizer:false
         modules.qbsbuildconfig.enableBundledQt:true
         products.qbs_archive.targetName:qbs-windows-${{ github.run_id }}
