--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,18 +62,20 @@ jobs:
         - {
             name: 'Build on Linux (clang_tidy)',
             script: './scripts/run-analyzer.sh',
+            image: 'focal',
             options: 'profile:qt-clang_64 modules.cpp.compilerWrapper:ccache',
             cacheid: 'clang',
           }
         - {
             name: 'Build on Linux (CMake)',
             script: './scripts/build-qbs-with-cmake.sh',
-            options: '-DQBS_USE_BUNDLED_QT_SCRIPT=1',
+            image: 'focal-qt6',
             cacheid: 'cmake',
           }
         - {
             name: 'Build on Linux (QMake)',
             script: './scripts/build-qbs-with-qmake.sh',
+            image: 'focal',
             options: 'CONFIG+=ccache',
             cacheid: 'qmake',
           }
@@ -96,13 +98,13 @@ jobs:
         key: ${{ runner.os }}-${{ matrix.config.cacheid }}-ccache-${{ steps.get-timestamp.outputs.timestamp }}
         restore-keys: ${{ runner.os }}-${{ matrix.config.cacheid }}-ccache-
     - name: Pull the Focal Image
-      run: docker-compose pull focal
+      run: docker-compose pull ${{ matrix.config.image }}
     - name: Print ccache stats
-      run: docker-compose run focal ccache -s
+      run: docker-compose run ${{ matrix.config.image }} ccache -s
     - name: Build Qbs
-      run: docker-compose run focal ${{ matrix.config.script }}
+      run: docker-compose run ${{ matrix.config.image }} ${{ matrix.config.script }}
     - name: Print ccache stats
-      run: docker-compose run focal ccache -s
+      run: docker-compose run ${{ matrix.config.image }} ccache -s
 
   build-macos:
     name: Build on macOS
