GitHub actions: only run baremetal job when run by bot
Change-Id: I3a235b3c2ba36778f0df76e9f777e3d053d855c7
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -398,6 +398,7 @@ jobs:
     runs-on: [self-hosted, windows, x64]
     timeout-minutes: 30
     needs: build-windows
+    if: ${{ github.actor == 'rweickelt' }}
     env:
       QBS_TEST_SOURCE_ROOT: 'tests'
       QT_ASSUME_STDERR_HAS_CONSOLE: 1
