GitHub actions: bump Xcode version to 12.5
Also, use fixed OS version for building Qbs - we don't want 'macos-latest' to be changed in the future.

Also, run ios and ios-simulator tests with 12.5.

Change-Id: I5345fb7b583c69b97299e6e695c17ac33026e13f
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -122,7 +122,7 @@ jobs:
 
   build-macos:
     name: Build on macOS
-    runs-on: macos-latest
+    runs-on: macos-10.15
     timeout-minutes: 60
     env:
       BUILD_OPTIONS: |
@@ -564,7 +564,7 @@ jobs:
 
   test-macos:
     name: ${{ matrix.config.name }}
-    runs-on: macos-latest
+    runs-on: ${{ matrix.config.runner }}
     timeout-minutes: 60
     needs: build-macos
     env:
@@ -576,23 +576,44 @@ jobs:
       matrix:
         config:
         - {
-            name: 'Run macOS tests (Xcode 12.4)',
+            name: 'Run macOS tests (Xcode 12.5)',
+            runner: 'macos-11.0',
             target: 'desktop',
             toolchain: 'clang_64',
-            testProfile: 'xcode_12_4-macosx-x86_64',
+            testProfile: 'xcode_12_5-macosx-x86_64',
             qtVersion: '5.15.2',
             script: './scripts/test-qbs.sh',
           }
         - {
-            name: 'Run macOS tests (Xcode 12.4, Qt 6.0)',
+            name: 'Run macOS tests (Xcode 12.5, Qt 6.0)',
+            runner: 'macos-11.0',
             target: 'desktop',
             toolchain: 'clang_64',
-            testProfile: 'xcode_12_4-macosx-x86_64',
+            testProfile: 'xcode_12_5-macosx-x86_64',
             qtVersion: '6.0.2',
             script: './scripts/test-qt.sh',
           }
         - {
+            name: 'Run iOS tests (Xcode 12.5)',
+            runner: 'macos-11.0',
+            target: 'ios',
+            toolchain: 'ios',
+            testProfile: 'xcode_12_5-iphoneos-arm64',
+            qtVersion: '5.15.2',
+            script: './scripts/test-qbs.sh',
+          }
+        - {
+            name: 'Run iOS-sim tests (Xcode 12.5)',
+            runner: 'macos-11.0',
+            target: 'ios',
+            toolchain: 'ios',
+            testProfile: 'xcode_12_5-iphonesimulator-x86_64',
+            qtVersion: '5.15.2',
+            script: './scripts/test-qbs.sh',
+          }
+        - {
             name: 'Run macOS tests (Xcode 11.6)',
+            runner: 'macos-10.15',
             target: 'desktop',
             toolchain: 'clang_64',
             testProfile: 'xcode_11_6-macosx-x86_64',
@@ -601,25 +622,10 @@ jobs:
           }
         - {
             name: 'Run macOS tests (Xcode 10.3)',
+            runner: 'macos-10.15',
             target: 'desktop',
             toolchain: 'clang_64',
             testProfile: 'xcode_10_3-macosx-x86_64',
-            qtVersion: '5.15.2',
-            script: './scripts/test-qbs.sh',
-          }
-        - {
-            name: 'Run iOS tests (Xcode 12.0)',
-            target: 'ios',
-            toolchain: 'ios',
-            testProfile: 'xcode_12-iphoneos-arm64',
-            qtVersion: '5.15.2',
-            script: './scripts/test-qbs.sh',
-          }
-        - {
-            name: 'Run iOS-sim tests (Xcode 12.0)',
-            target: 'ios',
-            toolchain: 'ios',
-            testProfile: 'xcode_12-iphonesimulator-x86_64',
             qtVersion: '5.15.2',
             script: './scripts/test-qbs.sh',
           }
