--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,7 @@ jobs:
 
   build-macos:
     name: Build on macOS
-    runs-on: macos-latest
+    runs-on: macos-10.15
     timeout-minutes: 60
     env:
       BUILD_OPTIONS: |
