Long live qbs-pkgconfig!
This patchset introduce a static library for parsing .pc files. Code is
based on the original pkg-config source code https://
gitlab.freedesktop.org/pkg-config/pkg-config and is written in pure C++
(except for the places where we need access to filesystem as
std::filesystem is not available for all platforms - in that case, Qt
classes are used)

Parsing .pc files manually allows to have more control over dependencies
between modules, e.g. to generate a standalone module per one .pc file
and merge properties using Qbs itself, not via pkg-config.

Library is almost feature-complete and all tests copied from pkg-config
pass. Some functionality is omitted (e.g. prefix variables (what is
this?) or validating dependencies since Qbs does this as well)

Bechmark shows that parsing ~100 files takes about 10-15ms. Running
pkg-config on the same set of files takes ~4 seconds:

RESULT : TestPkgConfig::benchSystem():
     14 msecs per iteration (total: 57, iterations: 4)

Fixes: QBS-1615
Change-Id: I5bfdfa588aa04d9d69fd738dd2beea14174c0242
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/src/lib/corelib/CMakeLists.txt
+++ b/src/lib/corelib/CMakeLists.txt
@@ -158,6 +158,8 @@ set(JS_EXTENSIONS_SOURCES
     jsextensions.h
     moduleproperties.cpp
     moduleproperties.h
+    pkgconfigjs.cpp
+    pkgconfigjs.h
     process.cpp
     temporarydir.cpp
     textfile.cpp
@@ -426,6 +428,7 @@ add_qbs_library(qbscore
         Qt${QT_VERSION_MAJOR}::Network
         Qt${QT_VERSION_MAJOR}::Xml
         Qt6Core5Compat
+        qbspkgconfig
         qbsscriptengine
     PUBLIC_DEPENDS
         Qt${QT_VERSION_MAJOR}::Core
