--- a/tests/auto/CMakeLists.txt
+++ b/tests/auto/CMakeLists.txt
@@ -5,5 +5,6 @@ add_subdirectory(blackbox)
 if(WITH_UNIT_TESTS)
     add_subdirectory(buildgraph)
     add_subdirectory(language)
+    add_subdirectory(pkgconfig)
     add_subdirectory(tools)
 endif()
