baremetal: Long live COSMIC toolchain for STM8 architecture
This patch adds support for Cosmic Software compiler for the
bare metal platforms:

 * https://www.cosmicsoftware.com/download.php

Note that this compiler only works on Windows host platforms.

Also the COSMIC toolchain has been added to the Github CI.

Fixes: QBS-1639
Change-Id: Iffba0bc550c5d168fb453c7a325b2c9be06d4195
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -535,6 +535,9 @@ jobs:
     - name: cosmic-4_3_11-arm
       run: QBS_AUTOTEST_PROFILE=cosmic-4_3_11-arm scripts/test-baremetal.sh release/install-root/bin
       shell: bash
+    - name: cosmic-4_5_2-stm8
+      run: QBS_AUTOTEST_PROFILE=cosmic-4_5_2-stm8 scripts/test-baremetal.sh release/install-root/bin
+      shell: bash
 
   test-macos:
     name: ${{ matrix.config.name }}
