baremetal: Long live COSMIC toolchain for HCS08 architecture
This patch adds support for Cosmic Software compiler for the
bare metal platforms:

 * https://www.cosmicsoftware.com/download.php

Note that this compiler only works on Windows host platforms.

Also the COSMIC toolchain has been added to the Github CI.

Fixes: QBS-1641
Change-Id: I755fcd3b2a89d0d40fda8b7f9da3d72ee1918df5
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -538,6 +538,9 @@ jobs:
     - name: cosmic-4_5_2-stm8
       run: QBS_AUTOTEST_PROFILE=cosmic-4_5_2-stm8 scripts/test-baremetal.sh release/install-root/bin
       shell: bash
+    - name: cosmic-4_6_3-hcs8
+      run: QBS_AUTOTEST_PROFILE=cosmic-4_6_3-hcs8 scripts/test-baremetal.sh release/install-root/bin
+      shell: bash
 
   test-macos:
     name: ${{ matrix.config.name }}
