--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -541,6 +541,9 @@ jobs:
     - name: cosmic-4_6_3-hcs8
       run: QBS_AUTOTEST_PROFILE=cosmic-4_6_3-hcs8 scripts/test-baremetal.sh release/install-root/bin
       shell: bash
+    - name: cosmic-4_8_11-hcs12
+      run: QBS_AUTOTEST_PROFILE=cosmic-4_8_11-hcs12 scripts/test-baremetal.sh release/install-root/bin
+      shell: bash
 
   test-macos:
     name: ${{ matrix.config.name }}
