baremetal: Long live COSMIC toolchain for COLDFIRE architecture
This patch adds support for Cosmic Software compiler for the
bare metal platforms:

 * https://www.cosmicsoftware.com/download.php

Note that this compiler only works on Windows host platforms.

Also the COSMIC toolchain has been added to the Github CI.

Fixes: QBS-1648
Change-Id: I39dfeef1c5696e69bed8969890cf4f8fdb3c2741
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -544,6 +544,9 @@ jobs:
     - name: cosmic-4_8_11-hcs12
       run: QBS_AUTOTEST_PROFILE=cosmic-4_8_11-hcs12 scripts/test-baremetal.sh release/install-root/bin
       shell: bash
+    - name: cosmic-4_1_0-m68k
+      run: QBS_AUTOTEST_PROFILE=cosmic-4_1_0-m68k scripts/test-baremetal.sh release/install-root/bin
+      shell: bash
 
   test-macos:
     name: ${{ matrix.config.name }}
