cmake: fix build with unittests and external QtScript
Change-Id: I6a9be028f90966afed97903586091888006a319e
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,9 @@ else()
   if(NOT TARGET Qt6Core5Compat)
     add_library(Qt6Core5Compat INTERFACE)
   endif()
+  if(Qt5Script_FOUND)
+      set_property(TARGET Qt5::Script PROPERTY IMPORTED_GLOBAL TRUE)
+  endif()
 endif()
 
 add_subdirectory(src)
