cmake: fix QtC build
Change-Id: I4f5ac22c5a58af984598d772c4f95cf1c9a465cf
Reviewed-by: Orgad Shaneh <orgads@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,8 +47,8 @@ else()
   if(NOT TARGET Qt6Core5Compat)
     add_library(Qt6Core5Compat INTERFACE)
   endif()
-  if(Qt5Script_FOUND)
-      set_property(TARGET Qt5::Script PROPERTY IMPORTED_GLOBAL TRUE)
+  if (NOT QBS_USE_BUNDLED_QT_SCRIPT AND Qt5Script_FOUND)
+      add_library(qbsscriptengine ALIAS Qt5::Script)
   endif()
 endif()
 
