CMake build: Look for QtScript quietly
If it is not found, the internal QtScript engine is used.
So the warning that QtScript is not found is just noise,
and always there when building with Qt 6.

Change-Id: I364cd47724c7b8ca6abaf8d9a3566d91e434be38
Reviewed-by: Ivan Komissarov <ABBAPOH@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ find_package(Qt${QT_VERSION_MAJOR}
     REQUIRED
     )
 
-find_package(Qt${QT_VERSION_MAJOR} OPTIONAL_COMPONENTS Script)
+find_package(Qt${QT_VERSION_MAJOR} OPTIONAL_COMPONENTS Script QUIET)
 
 if (Qt6_FOUND)
     find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core5Compat REQUIRED)
