--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,8 @@ else()
     add_library(Qt6Core5Compat INTERFACE)
   endif()
   if (NOT QBS_USE_BUNDLED_QT_SCRIPT AND Qt5Script_FOUND)
-      add_library(qbsscriptengine ALIAS Qt5::Script)
+      add_library(qbsscriptengine INTERFACE)
+      target_link_libraries(qbsscriptengine INTERFACE Qt5::Script)
   endif()
 endif()
 
