--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -721,7 +721,7 @@ jobs:
     - name: Update PATH
       run: echo "./release/install-root/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
     - name: Install required packages
-      run: choco install -y pkgconfiglite
+      run: choco install -y pkgconfiglite --download-checksum=6004df17818f5a6dbf19cb335cc92702
     - name: Install Qt
       uses: ./.github/actions/download-qt
       with:
