GitHub actions: add doc job
This job monitors only changes in documentation files
and uploads generated html files as a resulting artifact.

Also, ignore changes in documentation files when running tests -
this is more environment-friendly and saves a lot of time.

Change-Id: I807a5a246d8b9527ada2e9e5cd23234b9278b1b0
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,10 @@
 name: Build and test Qbs
 
-on: [push]
+on:
+  push:
+    paths-ignore:
+      - 'changelogs/**'
+      - 'doc/**'
 
 jobs:
   build-linux:
