Don't use std::filesystem with mingw
...in CMake and QMake builds

Change-Id: I423f1451461288c26db56079129e24c6b3d36e72
Reviewed-by: Christian Stenger <christian.stenger@qt.io>

--- a/src/lib/pkgconfig/CMakeLists.txt
+++ b/src/lib/pkgconfig/CMakeLists.txt
@@ -8,7 +8,7 @@ set(SOURCES
 )
 list_transform_prepend(SOLUTION_SOURCES solution/)
 
-if(APPLE)
+if(APPLE OR MINGW)
     set(HAS_STD_FILESYSTEM "0")
 else()
     set(HAS_STD_FILESYSTEM "1")
