Use experimental filesystem with GCC-7
Change-Id: I49a45cd48f861186cc55fcf304ed69e0481c2908
Reviewed-by: Christian Stenger <christian.stenger@qt.io>

--- a/src/lib/pkgconfig/CMakeLists.txt
+++ b/src/lib/pkgconfig/CMakeLists.txt
@@ -14,6 +14,11 @@ else()
     set(HAS_STD_FILESYSTEM "1")
 endif()
 
+set(QBS_PKGCONFIG_PUBLIC_DEPENDS "")
+if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 8.0)
+    set(QBS_PKGCONFIG_PUBLIC_DEPENDS "stdc++fs")
+endif()
+
 add_qbs_library(qbspkgconfig
     STATIC
     DEFINES
@@ -22,6 +27,6 @@ add_qbs_library(qbspkgconfig
         "HAS_STD_FILESYSTEM=${HAS_STD_FILESYSTEM}"
     PUBLIC_DEFINES
         "QBS_PC_WITH_QT_SUPPORT=1"
-    PUBLIC_DEPENDS Qt${QT_VERSION_MAJOR}::Core
+    PUBLIC_DEPENDS Qt${QT_VERSION_MAJOR}::Core ${QBS_PKGCONFIG_PUBLIC_DEPENDS}
     SOURCES ${SOURCES}
 )
