Disable Windows Baremetal tests
We no longer have access to the VM and it was shutted down.

Change-Id: I5ec6f09e10b87c9a4898ee5494dc42a9d9962371
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -453,7 +453,8 @@ jobs:
     runs-on: [self-hosted, windows, x64]
     timeout-minutes: 30
     needs: build-windows
-    if: ${{ github.actor == 'rweickelt' }}
+    # baremetal VM is down, disable the workflow for now
+    if: 'false'
     env:
       QBS_TEST_SOURCE_ROOT: 'tests'
       QT_ASSUME_STDERR_HAS_CONSOLE: 1
