pkgconfig: Merge packages and broken packages
This is required for the ongoing patch that merges the
dependencies on the pkgconfig level - a valid package
may change it's type to broken if it has unsatisfied
dependencies.

Change-Id: I21e6a214d8524fb95e6b837604ae6b7f32360d4f
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/src/lib/pkgconfig/CMakeLists.txt
+++ b/src/lib/pkgconfig/CMakeLists.txt
@@ -27,6 +27,6 @@ add_qbs_library(qbspkgconfig
         "HAS_STD_FILESYSTEM=${HAS_STD_FILESYSTEM}"
     PUBLIC_DEFINES
         "QBS_PC_WITH_QT_SUPPORT=1"
-    PUBLIC_DEPENDS Qt${QT_VERSION_MAJOR}::Core ${QBS_PKGCONFIG_PUBLIC_DEPENDS}
+    PUBLIC_DEPENDS Qt${QT_VERSION_MAJOR}::Core ${QBS_PKGCONFIG_PUBLIC_DEPENDS} qbsvariant
     SOURCES ${SOURCES}
 )
